--- a/test/index.html
+++ b/test/index.html
@@ -6,18 +6,8 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="./style.css" />
 		<script defer src="./script.js"></script>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-			crossorigin="anonymous"
-		/>
 	</head>
 	<body>
-		<div class="d-flex flex-md-row flex-md-column bg-danger">
-			<li class="bg-primary mb-3 align-self-md-auto flex-md-"></li>
-			<li class="bg-primary mb-3"></li>
-			<li class="bg-primary mb-3"></li>
-		</div>
+		<div class="container"></div>
 	</body>
 </html>
