--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,14 @@
 		<script defer src="./script.js"></script>
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="form-container">
+			<form>
+				<input type="text" value="" />
+				<button class="add-btn" type="submit">Add</button>
+			</form>
+			<div class="list-container">
+				<ul class="list-ul"></ul>
+			</div>
+		</div>
 	</body>
 </html>
