--- a/test/index.html
+++ b/test/index.html
@@ -3,19 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>JS Interview</title>
 		<link rel="stylesheet" href="./style.css" />
 		<script defer src="./script.js"></script>
 	</head>
-	<body>
-		<div class="form-container">
-			<form>
-				<input type="text" value="" />
-				<button class="add-btn" type="submit">Add</button>
-			</form>
-			<div class="list-container">
-				<ul class="list-ul"></ul>
-			</div>
-		</div>
-	</body>
+	<body></body>
 </html>
