vidal card added

--- a/tutorial/test/index.html
+++ b/tutorial/test/index.html
@@ -8,18 +8,5 @@
 		<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body>
-		<button id="btn">Click</button>
-		<h2
-			style="
-				outline: 4px solid red;
-				border: 7px solid blue;
-				padding: 10px;
-				margin: 40px;
-			"
-			class="text-3xl bg-zinc-900 text-white p-2 text-center w-[98%] m-auto mt-2 rounded-xl"
-		>
-			Learning JS
-		</h2>
-	</body>
+	<body></body>
 </html>
