--- a/django-email-template/django-emai.html
+++ b/django-email-template/django-emai.html
@@ -33,11 +33,7 @@
 			<tr>
 				<td>
 					<table
-						style="
-							background-color: #f2f3f8;
-							max-width: 670px;
-							margin: 0 auto;
-						"
+						style="background-color: #f2f3f8; max-width: 670px; margin: 0 auto"
 						width="100%"
 						border="0"
 						align="center"
@@ -49,11 +45,7 @@
 						</tr>
 						<tr>
 							<td style="text-align: center">
-								<a
-									href="https://rakeshmandal.com"
-									title="logo"
-									target="_blank"
-								>
+								<a href="https://rakeshmandal.com" title="logo" target="_blank">
 									<img
 										width="60"
 										src="https://raw.githubusercontent.com/rampravesh22/images/main/email-icon.png"
@@ -79,8 +71,7 @@
 										background: #fff;
 										border-radius: 3px;
 										text-align: center;
-										-webkit-box-shadow: 0 6px 18px 0
-											rgba(0, 0, 0, 0.06);
+										-webkit-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
 										-moz-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
 										box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
 									"
@@ -118,10 +109,9 @@
 													margin: 0;
 												"
 											>
-												We cannot simply send you your old password.
-												A unique link to reset your password has
-												been generated for you. To reset your
-												password, click the following link and
+												We cannot simply send you your old password. A unique
+												link to reset your password has been generated for you.
+												To reset your password, click the following link and
 												follow the instructions.
 											</p>
 											<a
