--- a/tutorial/test/index.html
+++ b/tutorial/test/index.html
@@ -4,9 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Javascript</title>
+		<link rel="stylesheet" href="style.css" />
 		<script defer src="./script.js"></script>
 		<!-- <script src="https://cdn.tailwindcss.com"></script> -->
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<button class="btn" style="border: 1px solid black; border-radius: 5px">
+			click
+		</button>
+		<!-- <div>
+			<span class="red">Red</span>
+		</div>
+		<div>
+			<span class="green">Green</span>
+		</div>
+		<div>
+			<span class="blue">Blue</span>
+		</div> -->
+	</body>
 </html>
